# satviz

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  python.md  scenario.md
examples/: satviz_example.ipynb
src/satviz/: __init__.py
src/satviz/static/: widget.css  widget.js
tests/: test_widget.py  widget_scenario.test.js
