[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satviz"
version = "0.3.0"
dependencies = [
    "anywidget"
]
description = "SatSimJS widget for Jupyter and Marimo (Cesium-based)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Alex Cabello" }
]
keywords = [
    "anywidget",
    "jupyter",
    "marimo",
    "cesium",
    "satellite",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ssc-ai/satviz"
Repository = "https://github.com/ssc-ai/satviz"
Issues = "https://github.com/ssc-ai/satviz/issues"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab",
    "marimo>=0.14.16",
]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = [
    "watchfiles",
    "jupyterlab",
    "marimo>=0.14.16",
    "satviz",
]

[tool.hatch.build]
# Limit artifacts to the Python package (and include its static assets)
only-include = [
  "src/satviz",
]

[tool.hatch.build.targets.wheel]
# Ensure src-layout package discovery and include package data
packages = ["src/satviz"]

[tool.uv.sources]
satviz = { workspace = true }
